Introduce safety mechanisms for class initializers / constructors for helper classes Switch to ReflectionUtils.UnsafeHelper for ReflectionUtils.setAccessible Switch to ReflectionUtils.ModuleHelper for module related stuff Add more documentation Clean up